--- a/hw-01.md
+++ b/hw-01.md
@@ -13,4 +13,4 @@
 
 Ответы:
 
-2. personal.auto.tfvars
+2. personal.auto.tfvars - конфиг с значением переменных, часто является секретным, нужно с осторожностью пушить в публичные репозитарии.
