--- a/hw-01.md
+++ b/hw-01.md
@@ -14,3 +14,5 @@
 Ответы:
 
 2. personal.auto.tfvars - конфиг с значением переменных, часто является секретным, нужно с осторожностью пушить в публичные репозитарии.
+
+3. "result": "C2PkP9egyE0Y8vDL"
