--- a/hw-01.md
+++ b/hw-01.md
@@ -16,3 +16,22 @@
 2. personal.auto.tfvars - конфиг с значением переменных, часто является секретным, нужно с осторожностью пушить в публичные репозитарии.
 
 3. "result": "C2PkP9egyE0Y8vDL"
+
+```shell
+╷
+│ Error: Missing name for resource
+│
+│   on main.tf line 23, in resource "docker_image":
+│   23: resource "docker_image" {
+│
+│ All resource blocks must have 2 labels (type, name).
+╵
+╷
+│ Error: Invalid resource name
+│
+│   on main.tf line 28, in resource "docker_container" "1nginx":
+│   28: resource "docker_container" "1nginx" {
+│
+│ A name must start with a letter or underscore and may contain only letters, digits, underscores, and dashes.
+╵
+```
