--- a/hw-01.md
+++ b/hw-01.md
@@ -17,8 +17,9 @@
 
 3. "result": "C2PkP9egyE0Y8vDL"
 
+4.
 ```shell
-╷
+╷В данной ошибке не прописан параметр type
 │ Error: Missing name for resource
 │
 │   on main.tf line 23, in resource "docker_image":
@@ -26,12 +27,36 @@
 │
 │ All resource blocks must have 2 labels (type, name).
 ╵
-╷
+╷как я понял мы запрашивает nginx а тут обращаемся к 1nginx и он не понимает что от него хотят
 │ Error: Invalid resource name
 │
-│   on main.tf line 28, in resource "docker_container" "1nginx":
+│   on main.tf line 28, in resource "docker_container" "1nginx": 
 │   28: resource "docker_container" "1nginx" {
 │
 │ A name must start with a letter or underscore and may contain only letters, digits, underscores, and dashes.
 ╵
 ```
+Я исправил две ошибки, но словил третью.
+
+```shell
+╷Тут не хватало двойных кавычек
+│ Error: Reference to undeclared resource
+│
+│   on main.tf line 29, in resource "docker_container" "nginx":
+│   29:   image = docker_image.nginx.image_id
+│
+│ A managed resource "docker_image" "nginx" has not been declared in the root module.
+╵
+```
+Итоговый правильный вариант раскоментированного кода выглядит так:
+
+```shell
+resource "docker_image" type {
+  name         = "nginx:latest"
+  keep_locally = true
+}
+
+resource "docker_container" "nginx" {
+  image = "docker_image.nginx.image_id"
+  name  = "example_${random_password.random_string.result}"
+  ```
