--- a/hw-01.md
+++ b/hw-01.md
@@ -8,8 +8,8 @@
 5. Выполните код. В качестве ответа приложите вывод команды ```docker ps```
 6. Замените имя docker-контейнера в блоке кода на ```hello_world```, выполните команду ```terraform apply -auto-approve```.
 Объясните своими словами, в чем может быть опасность применения ключа  ```-auto-approve``` ? 
-8. Уничтожьте созданные ресурсы с помощью **terraform**. Убедитесь, что все ресурсы удалены. Приложите содержимое файла **terraform.tfstate**. 
-9. Объясните, почему при этом не был удален docker образ **nginx:latest** ?(Ответ найдите в коде проекта или документации)
+7. Уничтожьте созданные ресурсы с помощью **terraform**. Убедитесь, что все ресурсы удалены. Приложите содержимое файла **terraform.tfstate**. 
+8. Объясните, почему при этом не был удален docker образ **nginx:latest** ?(Ответ найдите в коде проекта или документации)
 
 Ответы:
 
@@ -36,27 +36,46 @@
 │ A name must start with a letter or underscore and may contain only letters, digits, underscores, and dashes.
 ╵
 ```
-Я исправил две ошибки, но словил третью.
 
-```shell
-╷Тут не хватало двойных кавычек
-│ Error: Reference to undeclared resource
-│
-│   on main.tf line 29, in resource "docker_container" "nginx":
-│   29:   image = docker_image.nginx.image_id
-│
-│ A managed resource "docker_image" "nginx" has not been declared in the root module.
-╵
-```
 Итоговый правильный вариант раскоментированного кода выглядит так:
 
 ```shell
-resource "docker_image" type {
+resource "docker_image" "nginx" {
   name         = "nginx:latest"
   keep_locally = true
 }
 
 resource "docker_container" "nginx" {
-  image = "docker_image.nginx.image_id"
+  image = docker_image.nginx.image_id
   name  = "example_${random_password.random_string.result}"
+  ports {
+    internal = 80
+    external = 8000
+  }
+}
   ```
+5.
+```shell
+Apply complete! Resources: 1 added, 0 changed, 0 destroyed.
+root@ubnt2004:~/terraform_dz/hw-01# docker ps
+CONTAINER ID   IMAGE          COMMAND                  CREATED          STATUS          PORTS                  NAMES
+9ff643e34e47   904b8cb13b93   "/docker-entrypoint.…"   13 seconds ago   Up 12 seconds   0.0.0.0:8000->80/tcp   example_C2PkP9egyE0Y8vDL
+```
+
+6. Как я понял в момент применения данной команды terraform игнорирует необходимость делать plan и сразу заливает конфигурацию.
+
+7.
+```shell
+root@ubnt2004:~/terraform_dz/hw-01# cat terraform.tfstate
+{
+  "version": 4,
+  "terraform_version": "1.3.7",
+  "serial": 19,
+  "lineage": "08ecd5e7-21aa-d08d-58de-f6ab8f20d210",
+  "outputs": {},
+  "resources": [],
+  "check_results": null
+}
+```
+
+8. nginx:latest скорее всего остался, так как мы получили новый контейнер с именем hello_world, и его как последний прописанный в конфигурации terraform и удалил.
