--- a/hw-02.md
+++ b/hw-02.md
@@ -1,1 +1,65 @@
-asd
+### Задание 0
+
+1. Ознакомьтесь с [документацией к security-groups в Yandex Cloud](https://cloud.yandex.ru/docs/vpc/concepts/security-groups?from=int-console-help-center-or-nav).
+2. Запросите preview доступ к данному функционалу в ЛК Yandex Cloud. Обычно его выдают в течении 24-х часов.
+https://console.cloud.yandex.ru/folders/<ваш cloud_id>/vpc/security-groups
+Этот функционал понадобится к следующей лекции. 
+
+
+### Задание 1
+
+1. Изучите проект. В файле variables.tf объявлены переменные для yandex provider.
+2. Переименуйте файл personal.auto.tfvars_example в personal.auto.tfvars. Заполните переменные (идентификаторы облака, токен доступа). Благодаря .gitignore этот файл не попадет в публичный репозиторий. **Вы можете выбрать иной способ безопасно передать секретные данные в terraform.**
+3. Сгенерируйте или используйте свой текущий ssh ключ. Запишите его открытую часть в переменную **vms_ssh_root_key**.
+4. Инициализируйте проект, выполните код. Исправьте возникшую ошибку. Ответьте в чем заключается ее суть?
+5. Ответьте, что означает ```preemptible = true``` и ```core_fraction``` в параметрах ВМ? Как это может пригодится в процессе обучения? Ответ в документации Yandex cloud.
+
+В качестве решения приложите:
+- скриншот ЛК Yandex Cloud с созданной ВМ,
+- скриншот успешного подключения к консоли ВМ через ssh,
+- ответы на вопросы.
+
+Ответы:
+
+### Задание 2
+
+1. Изучите файлы проекта.
+2. Замените все "хардкод" **значения** для ресурсов **yandex_compute_image** и **yandex_compute_instance** на **отдельные** переменные. К названиям переменных ВМ добавьте в начало префикс **vm_web_** .  Пример: **vm_web_name**.
+2. Объявите нужные переменные в файле variables.tf, обязательно указывайте тип переменной. Заполните их **default** прежними значениями из main.tf. 
+3. Проверьте terraform plan (изменений быть не должно). 
+
+Ответы:
+
+### Задание 3
+
+1. Создайте в корне проекта файл 'vms_platform.tf' . Перенесите в него все переменные ВМ.
+2. Скопируйте блок ресурса и создайте с его помощью вторую ВМ: **"netology-develop-platform-db"** ,  cores  = 2, memory = 2, core_fraction = 20. Объявите ее переменные с префиксом **vm_db_** в том же файле.
+3. Примените изменения.
+
+Ответы:
+
+### Задание 4
+
+1. Объявите в файле outputs.tf отдельные output, для каждой из ВМ с ее внешним IP адресом.
+2. Примените изменения.
+
+В качестве решения приложите вывод значений ip-адресов команды ```terraform output```
+
+Ответы:
+
+### Задание 5
+
+1. В файле locals.tf опишите в **одном** local-блоке имя каждой ВМ, используйте интерполяцию по примеру из лекции.
+2. Замените переменные с именами ВМ из файла variables.tf на созданные вами local переменные.
+3. Примените изменения.
+
+Ответы:
+
+### Задание 6
+
+1. Вместо использования 3-х переменных  ".._cores",".._memory",".._core_fraction" в блоке  resources {...}, объедените их в переменные типа **map** с именами "vm_web_resources" и "vm_db_resources".
+2. Так же поступите с блоком **metadata {serial-port-enable, ssh-keys}**, эта переменная должна быть общая для всех ваших ВМ.
+3. Найдите и удалите все более не используемые переменные проекта.
+4. Проверьте terraform plan (изменений быть не должно).
+
+Ответы:
