--- a/hw-02.md
+++ b/hw-02.md
@@ -21,6 +21,15 @@ https://console.cloud.yandex.ru/folders/<ваш cloud_id>/vpc/security-groups
 
 Ответы:
 
+<p align="center">
+  <img width="2400" height="100" src="./hw-02/VM.JPG">
+</p>
+
+4. В ошибке terraform ругается что в данном инстансе нелзя взять машину с количеством ядер отличных от дефаулта (2,4).
+5.
+preemptible = true - Параметр говорит о том, что мы создаем прерываемую VM, которую можно принудително остановить в любой момент.
+core_fraction - Параметр показывает сколько % от процессорной мощности будет гарантированно нам выделено.
+
 ### Задание 2
 
 1. Изучите файлы проекта.
