--- a/hw-02.md
+++ b/hw-02.md
@@ -25,6 +25,11 @@ https://console.cloud.yandex.ru/folders/<ваш cloud_id>/vpc/security-groups
   <img width="2400" height="250" src="./hw-02/VM.JPG">
 </p>
 
+<p align="center">
+  <img width="500" height="500" src="./hw-02/ssh.JPG">
+</p>
+
+
 4. В ошибке terraform ругается что в данном инстансе нелзя взять машину с количеством ядер отличных от дефаулта (2,4).
 5.
 preemptible = true - Параметр говорит о том, что мы создаем прерываемую VM, которую можно принудително остановить в любой момент.
