--- a/hw-02.md
+++ b/hw-02.md
@@ -44,6 +44,42 @@ core_fraction - Параметр показывает сколько % от пр
 
 Ответы:
 
+2. Заменил на переменные
+```shell
+data "yandex_compute_image" "ubuntu" {
+  family = "${var.vm_web_os}"
+}
+resource "yandex_compute_instance" "platform" {
+  name        = "${var.vm_web_inst}"
+  platform_id = "${var.vm_web_platf}"
+```
+Описал переменные
+```shell
+variable "vm_web_os" {
+  type        = string
+  default     = "ubuntu-2004-lts"
+  description = "ubuntu-2004-lts"
+}
+
+variable "vm_web_inst" {
+  type        = string
+  default     = "netology-develop-platform-web"
+  description = "netology-develop-platform-web"
+}
+
+variable "vm_web_platf" {
+  type        = string
+  default     = "standard-v1"
+  description = "standard-v1"
+}
+```
+
+Итог в консоли
+
+<p align="center">
+  <img width="800" height="500" src="./hw-02/var.JPG">
+</p>
+
 ### Задание 3
 
 1. Создайте в корне проекта файл 'vms_platform.tf' . Перенесите в него все переменные ВМ.
