--- a/hw-02.md
+++ b/hw-02.md
@@ -77,7 +77,7 @@ variable "vm_web_platf" {
 Итог в консоли
 
 <p align="center">
-  <img width="800" height="500" src="./hw-02/var.JPG">
+  <img width="300" height="200" src="./hw-02/var.JPG">
 </p>
 
 ### Задание 3
@@ -87,6 +87,10 @@ variable "vm_web_platf" {
 3. Примените изменения.
 
 Ответы:
+
+<p align="center">
+  <img width="300" height="200" src="./hw-02/2vm.JPG">
+</p>
 
 ### Задание 4
 
