--- a/hw-02.md
+++ b/hw-02.md
@@ -101,6 +101,12 @@ variable "vm_web_platf" {
 
 Ответы:
 
+Outputs:
+
+yandex_compute_instance = "158.160.49.219"
+yandex_compute_instance2 = "158.160.55.187"
+
+
 ### Задание 5
 
 1. В файле locals.tf опишите в **одном** local-блоке имя каждой ВМ, используйте интерполяцию по примеру из лекции.
