--- a/hw-02.md
+++ b/hw-02.md
@@ -102,10 +102,10 @@ variable "vm_web_platf" {
 Ответы:
 
 Outputs:
-
+```shell
 yandex_compute_instance = "158.160.49.219"
 yandex_compute_instance2 = "158.160.55.187"
-
+```
 
 ### Задание 5
 
@@ -114,6 +114,11 @@ yandex_compute_instance2 = "158.160.55.187"
 3. Примените изменения.
 
 Ответы:
+
+<p align="center">
+  <img width="1200" height="400" src="./hw-02/local.JPG">
+</p>
+
 
 ### Задание 6
 
