--- a/hw-02.md
+++ b/hw-02.md
@@ -115,6 +115,8 @@ yandex_compute_instance2 = "158.160.55.187"
 
 Ответы:
 
+IP изменились так как выключал машины.
+
 <p align="center">
   <img width="1200" height="400" src="./hw-02/local.JPG">
 </p>
@@ -128,3 +130,9 @@ yandex_compute_instance2 = "158.160.55.187"
 4. Проверьте terraform plan (изменений быть не должно).
 
 Ответы:
+
+<p align="center">
+  <img width="1200" height="400" src="./hw-02/var2.JPG">
+</p>
+
+Лишнее как понимаю выходит variable "vms_ssh_root_key"
