--- a/hw-03.md
+++ b/hw-03.md
@@ -10,6 +10,11 @@
 
 Ответы:
 
+<p align="center">
+  <img width="2000" height="800" src="./hw-03/secgr.jpg">
+</p>
+
+
 ------
 
 ### Задание 2
@@ -21,6 +26,14 @@
 5. Инициализируйте проект, выполните код.
 
 Ответы:
+
+<p align="center">
+  <img width="1500" height="1200" src="./hw-03/itog.jpg">
+</p>
+
+<p align="center">
+  <img width="2000" height="800" src="./hw-03/ycvm.jpg">
+</p>
 
 ------
 
