--- a/hw-03.md
+++ b/hw-03.md
@@ -64,3 +64,7 @@
 **Удалите все созданные ресурсы**.
 
 Ответы:
+
+<p align="center">
+  <img width="562" height="237" src="./hw-03/hosts.jpg">
+</p>
