--- a/hw-04.md
+++ b/hw-04.md
@@ -32,6 +32,8 @@ module "vpc_dev" {
 ```
 Ответ:
 
+[**Файл MD тут**](https://github.com/bigorado/terraform_dz/blob/terraform-04/hw-04/markdown_vpc.md)
+
 ## Requirements
 
 | Name | Version |
